# rust-playground

./: Cargo.toml  README.md  main
src/: main.rs  square_n_sum.rs  tribonacci.rs
src/katas/: add_two_nums.rs  counting_duplicates.rs  duplicate_encode.rs  mod.rs  reducing_by_steps.rs  sum_of_pairs.rs  the_lift.rs
src/tmdb_cli/: api.rs  cli.rs  configuration.rs  mod.rs  movie_details.rs
src/tmdb_cli/models/: extended_movie_details.rs
tmdb_cli/: Cargo.toml
tmdb_cli/src/: api.rs  cli.rs  configuration.rs  main.rs
tmdb_cli/src/models/: extended_movie_details.rs  mod.rs  movie_credits.rs  movie_details.rs  movie_images.rs
