[package]
name = "training"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# HTTP
reqwest = { version = "0.11.11", features = ["json"] }

# Async
tokio = { version = "1.19.2", features = ["full"] }
futures = "0.3.21"

# Serialize/Deserialize
serde = { version = "1.0.81", features = ["derive"] }
serde_json  = "1.0.81"

# Utils
itertools = "0.10.3"